fix deploy script #9

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,11 @@ branches:
 script: >
   npm install -g harmonic &&
   harmonic build &&
-  echo git --version &&
   git clone --depth=1 --branch=master https://$GH_TOKEN@github.com/JSRocksHQ/jsrockshq.github.io.git /tmp/deploy &&
   cp public/* -r /tmp/deploy &&
   cd /tmp/deploy &&
   git add . &&
-  git commit -C $(TRAVIS_COMMIT) &&
+  git commit -C $TRAVIS_COMMIT &&
   git push origin HEAD
 env:
   global:
