--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,8 @@ script: >
   cp public/* -r /tmp/deploy &&
   cd /tmp/deploy &&
   git add . &&
-  git config user.name "Travis CI" &&
-  git config user.email "" &&
   git fetch --depth=1 origin src &&
-  git commit -C $TRAVIS_COMMIT &&
+  git commit --author="Travis CI <>" -C $TRAVIS_COMMIT &&
   git push origin HEAD
 env:
   global:
