--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ script: >
   cd /tmp/deploy &&
   git add . &&
   git fetch --depth=1 origin src &&
-  git commit --author="Travis CI <>" -C $TRAVIS_COMMIT &&
+  git config user.name "Travis CI" &&
+  git commit -C $TRAVIS_COMMIT &&
   git push origin HEAD
 env:
   global:
